# Chocobot

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/chocobot/: app.py  constants.py
src/chocobot/constants/: __init__.py  constants.py
src/chocobot/curseforge/: Curseforge.py  __init__.py
